@@ -2136,4 +2136,20 @@ No match
  +3 ^   ^    
  0: abcd
 
+/[\p{N}]?+/BZO
+------------------------------------------------------------------
+        Bra
+        [\p{N}]?+
+        Ket
+        End
+------------------------------------------------------------------
+
+/[\p{L}ab]{2,3}+/BZO
+------------------------------------------------------------------
+        Bra
+        [ab\p{L}]{2,3}+
+        Ket
+        End
+------------------------------------------------------------------
+
 /-- End of testinput7 --/
